5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1724_2517.log
== TEST (2019-05-14 21:35:14) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
while h0>0:
	h0 = h0 - (1/2)*g*(t**2)
	t = t + 1
	print("t = ", t)
	print("h = ",h0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:36:15) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
while h0>0:
	h0 = h0 - (1/2)*g*(t**2)
	print("t = ", t)
	t = t + 1
	print("h = ",h0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:37:10) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	print("t = ", t)
	t = t + 1
	print("h = ",h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:38:03) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	print("t = ", t)
	t = t + 1
	print("h = ",round(h, 1)
-- ERROR:
File "XXXX", line 10
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:38:13) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	print("t = ", t)
	t = t + 1
	print("h = ",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:39:19) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
		if h>0:
		print("t = ", t)
		t = t + 1
		print("h = ",round(h, 1))
-- ERROR:
File "XXXX", line 7
    if h>0:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:39:38) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>0:
		print("t = ", t)
		t = t + 1
		print("h = ",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:39:44) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>0:
		print("t = ", t)
		t = t + 1
		print("h = ",round(h, 1))
-- EXECUTION TIME:
0.50351
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1724/2517/main.py", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:39:57) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>0:
		print("t = ", t)
		t = t + 1
		print("h = ",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:41:54) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>0:
		print("t = ", t)
		t = t + 1
		print("h = ",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:41:57) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>0:
		print("t = ", t)
		t = t + 1
		print("h = ",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:42:22) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>0:
		print("t = ", t)
		t = t + 1
		print("h = ",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:42:35) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- EXECUTION TIME:
0.555114
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1724/2517/main.py", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:42:37) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:43:21) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:43:27) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- EXECUTION TIME:
0.523271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1724/2517/main.py", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:43:36) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:43:41) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:43:46) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:43:51) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:04) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:13) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:20) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:25) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:28) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:34) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:38) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:42) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:47) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:49) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:44:54) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:45:02) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:45:06) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:45:10) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:45:17) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:45:25) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:46:22) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>=0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- EXECUTION TIME:
0.487719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1724/2517/main.py", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:46:23) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
while h>=0:
	h = h0 - (1/2)*g*(t**2)
	if h>=0:
		print("t =", t)
		t = t + 1
		print("h =",round(h, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:48:10) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
if h>=0:
	while not(h<=0):
		h = h0 - (1/2)*g*(t**2)
		if h>=0:
			print("t =", t)
			t = t + 1
			print("h =",round(h, 1))
			
			
			
			
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:48:33) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
if h>=0:
	while not(h<=0):
		h = h0 - (1/2)*g*(t**2)
		if h>=0:
			print("t =", t)
			t = t + 1
			print("h =",round(h, 1))
			
			
			
			
			
			
-- EXECUTION TIME:
0.407214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1724/2517/main.py", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:34) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
if h>=0:
	while not(h<=0):
		h = h0 - (1/2)*g*(t**2)
		if h>=0:
			print("t =", t)
			t = t + 1
			print("h =",round(h, 1))
			
			
			
			
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:55) 
-- CODE:
h0 = int(input("altura: "))
g = 9.8
t = 0
h = h0
if h>=0:
	while not(h<=0):
		h = h0 - (1/2)*g*(t**2)
		if h>=0:
			print("t =", t)
			t = t + 1
			print("h =",round(h, 1))
			
			
			
			
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    h0 = int(input())
ValueError: invalid literal for int() with base 10: '36.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:42:05) 
-- CODE:
h0 = float(input("altura: "))
g = 9.8
t = 0
h = h0
if h>=0:
	while not(h<=0):
		h = h0 - (1/2)*g*(t**2)
		if h>=0:
			print("t =", t)
			t = t + 1
			print("h =",round(h, 1))
			
			
			
			
			
			
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:42:11) 
-- CODE:
h0 = float(input("altura: "))
g = 9.8
t = 0
h = h0
if h>=0:
	while not(h<=0):
		h = h0 - (1/2)*g*(t**2)
		if h>=0:
			print("t =", t)
			t = t + 1
			print("h =",round(h, 1))
			
			
			
			
			
			
-- EXECUTION TIME:
0.155501
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 0
h = 11.5
t = 1
h = 6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
